2006-01-01  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Update copyright notice.
	* example/calc/testsuite/calc.test/calc.exp: Likewise.
	* example/calc/testsuite/config/unix.exp: Likewise.
	* testsuite/libdejagnu/tunit.exp: Likewise.
	* testsuite/runtest.all/libs.exp: Likewise.
	* testsuite/runtest.all/options.exp: Likewise.
	* testsuite/runtest.all/stats-sub.exp: Likewise.
	* testsuite/runtest.all/stats.exp: Likewise.

2006-01-01  Ben Elliston  <bje@gnu.org>

	* config/default.exp, config/unix.exp, config/vxworks.exp,
	lib/debugger.exp, lib/dejagnu.exp, lib/framework.exp,
	lib/libgloss.exp, lib/remote.exp, testsuite/lib/util-defs.exp:
	Formatting fixes.
	* dejagnu.h, testsuite/config/default.exp,
	testsuite/lib/libsup.exp, testsuite/libdejagnu/tunit.exp,
	testsuite/libdejagnu/unit.cc, testsuite/runtest.all/libs.exp,
	testsuite/runtest.all/options.exp,
	testsuite/runtest.all/stats-sub.exp,
	testsuite/runtest.all/stats.exp: Update copyright notice and FSF
	office address. Remove bug reporting address, as it is now
	maintained centrally in the README file.

2005-12-31  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test: Don't bother mentioning
	absolute, psource, prune and slay as untested procedures.

2005-12-31  Ben Elliston  <bje@gnu.org>

	* doc/ref.xml (Utility Procedures): Note that the following
	procedures are deprecated: absolute, psource, prune, slay.
	* NEWS: Likewise.
	* doc/dejagnu.texi: Regenerate.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* Makefile.am (doc/dejagnu.texi): Don't use shell redirection, in
	case the command fails and zeroes the Texinfo source file.  Move
	the output (if successful) by its default filename using mv(1).
	* Makefile.in: Regenerate.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* configure.ac (DOCBOOK2X_TEXI): Add search for this program.
	* configure: Regenerate.
	* Makefile.am (DOCBOOK2PDF, DOCBOOK2RTF, DOCBOOK2PS): New.
	(DOCBOOK2HTML, DOCBOOK2X_TEXI): Likewise.
	(dejagnu.pdf): Use $(DOCBOOK2PDF).