@@ -1,20 +1,21 @@
-/*
- * Copyright (C) 2000, 2001, 2002, 2004 Free Software Foundation, Inc.
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with DejaGnu; if not, write to the Free Software Foundation,
- * Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
- */
+/* Dejagnu unit testing header.
+   Copyright (C) 2000, 2001, 2002, 2004 Free Software Foundation, Inc.
+
+This file is part of DejaGnu.
+
+DejaGnu is free software; you can redistribute it and/or modify it
+under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+
+DejaGnu is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with DejaGnu; if not, write to the Free Software Foundation,
+Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.  */
 
 #ifndef __DEJAGNU_H__
 #define __DEJAGNU_H__
@@ -260,5 +261,5 @@ class TestState {
     std::string GetMsg (void) { return lastmsg; }
 };
 
-#endif // __cplusplus
-#endif // _DEJAGNU_H_
+#endif /* __cplusplus */
+#endif /* _DEJAGNU_H_ */
